# cli-hub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  README_i18n.md  deplink.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: BACKEND_REFACTOR_PLAN.md  CODEX_MCP_RAW_TOML_PLAN.md  REFACTORING_CHECKLIST.md  REFACTORING_MASTER_PLAN.md  provider-refactor-summary.md  refactor-prompt.md  v3.7.0-unified-mcp-refactor.md
scripts/: extract-icons.js
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: app_config.rs  auto_launch.rs  config.rs  database.rs  deeplink.rs  gemini_mcp.rs  lib.rs  main.rs  provider.rs  settings.rs  tray.rs
src-tauri/src/commands/: mcp.rs  misc.rs
src-tauri/src/database/: backup.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/database/dao/: mcp.rs  mod.rs  prompt.rs  provider.rs  settings.rs  skill.rs
src-tauri/src/deeplink/: mcp.rs  mod.rs  parser.rs  prompt.rs  provider.rs  skill.rs  types.rs  utils.rs
src-tauri/src/mcp/: helpers.rs  mod.rs  toml_convert.rs  validation.rs
src-tauri/src/mcp/sync/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/services/: env_manager.rs  provider.rs  skill.rs  speedtest.rs
src-tauri/src/services/provider/: claude.rs  credentials.rs  endpoints.rs  gemini.rs  live_config.rs  mod.rs  types.rs  usage.rs  validation.rs
src-tauri/tests/: app_config_load.rs  app_type_parse.rs  deeplink_import.rs  import_export_sync.rs  mcp_commands.rs  provider_commands.rs  provider_service.rs  support.rs
src/app/: AppContent.tsx  AppHeader.tsx  AppShell.tsx  EnvConflictBanner.tsx  ViewActions.tsx  types.ts
src/app/hooks/: useEnvConflicts.ts
src/app/modals/: ProvidersModals.tsx
src/components/: UsageScriptModal.tsx  theme-provider.tsx
src/components/providers/: ProviderActions.tsx  ProviderCard.tsx  (+2 more)
src/config/: claudeProviderPresets.ts  codexProviderPresets.ts  geminiProviderPresets.ts
src/hooks/: useDirectorySettings.ts  useImportExport.ts
tests/components/: ProviderList.test.tsx
tests/hooks/: useDirectorySettings.test.tsx  useSettings.test.tsx
tests/integration/: SettingsDialog.test.tsx
(+8 files in other folders)
